# vimusic

./: Cargo.toml
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
